--- a/servicebook/web/templates/main.html
+++ b/servicebook/web/templates/main.html
@@ -12,6 +12,12 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
           crossorigin="anonymous">
 
+    <!-- Шрифт со значками -->
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+          crossorigin="anonymous">
+
     <!--    <link rel="stylesheet" href="css/bootstrap-breakpoint.css">-->
     <!--    <link rel="stylesheet" href="css/stylesheet.css">-->
 
