--- a/servicebook/web/templates/reclamation.html
+++ b/servicebook/web/templates/reclamation.html
@@ -68,7 +68,7 @@
                         <td>{{v.repair_date}}</td>
                         <td>{{v.downtime}}</td>
                         <td>{{v.vehicle}}</td>
-                        <td><a href="{% url 'handbook_detail' v.service_company.pk %}"/>{{v.service_company}}</td>
+                        <td>{{v.service_company.first_name}}</td>
                     </tr>
                     {% endfor %}
                     </tbody>
