--- a/servicebook/web/templates/maintenance.html
+++ b/servicebook/web/templates/maintenance.html
@@ -62,7 +62,7 @@
                         <td>{{v.work_order_id}}</td>
                         <td>{{v.work_order_date}}</td>
                         <td>{{v.vehicle}}</td>
-                        <td><a href="{% url 'handbook_detail' v.service_company.pk %}"/>{{v.service_company}}</td>
+                        <td>{{v.service_company.first_name}}</td>
                     </tr>
                     {% endfor %}
                     </tbody>
