Добавил приветственные сообщения

--- a/servicebook/web/templates/reclamation.html
+++ b/servicebook/web/templates/reclamation.html
@@ -2,6 +2,18 @@
 
 {% block content %}
     <div class="container">
+        <!-- Приветствие -->
+        <div class="div row">
+            <div class="div col">
+                <p>{{ user.first_name }}</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center">
+                <p class="fs-3">Информация о рекламациях</p>
+            </div>
+        </div>
+
         <!-- Кнопки навигации -->
         <div class="row">
             <div class="col">
