--- a/servicebook/web/templates/main.html
+++ b/servicebook/web/templates/main.html
@@ -28,9 +28,48 @@
 </head>
 
 <body>
+    <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+        <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            Logo
+        </a>
+
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li>+7-8352-20-12-09, telegram</li>
+        </ul>
+
+        <div class="col-md-3 text-end">
+            {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="btn btn-outline-primary me-2">Выйти</a>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">Вход</a>
+            {% endif %}
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <p class="text-center fs-2 fw-bold">Электронная сервисная
+                    книжка "Мой Силант"</p>
+            </div>
+        </div>
+    </div>
+
     <main>
         {% block content %}
         {% endblock content %}
     </main>
+
+    <footer class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-top">
+        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+            <li>+7-8352-20-12-09, telegram</li>
+            <li>Мой Силант 2023</li>
+        </ul>
+    </footer>
+
+    <!-- Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
 </body>
 </html>
