--- a/servicebook/web/templates/login.html
+++ b/servicebook/web/templates/login.html
@@ -1,9 +1,19 @@
 {% extends 'main.html' %}
 
 {% block content %}
-    <form method="POST">
-        {% csrf_token %}
-        {{ form.as_div }}
-        <button type="submit" class="btn btn-primary">Войти</button>
-    </form>
+    <div class="col-md-10 mx-auto col-lg-5 p-5">
+        <form method="POST" class="p-4 p-md-5 border rounded-3 bg-light">
+            {% csrf_token %}
+            {{ form.non_field_errors }}
+            <div class="form-floating mb-3">
+                {{form.username}}
+                {{form.username.label_tag}}
+            </div>
+            <div class="form-floating mb-3">
+                {{form.password}}
+                {{form.password.label_tag}}
+            </div>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Войти</button>
+        </form>
+    </div>
 {% endblock content %}
