--- a/servicebook/web/templates/vehicle.html
+++ b/servicebook/web/templates/vehicle.html
@@ -17,10 +17,10 @@
         <!-- Кнопки навигации -->
         <div class="row">
             <div class="col">
-                <div class="btn-group">
-                  <a href="{% url 'info' %}" class="btn btn-primary active" aria-current="page">Общая информация</a>
-                  <a href="{% url 'maintenance' %}" class="btn btn-primary">ТО</a>
-                  <a href="{% url 'reclamation' %}" class="btn btn-primary">Рекламации</a>
+                <div class="btn-group d-flex justify-content-evenly">
+                  <a href="{% url 'info' %}" class="btn btn-primary rounded-pill active" aria-current="page">Общая информация</a>
+                  <a href="{% url 'maintenance' %}" class="btn btn-light border border-4 rounded-pill">ТО</a>
+                  <a href="{% url 'reclamation' %}" class="btn btn-light border border-4 rounded-pill">Рекламации</a>
                 </div>
             </div>
         </div>
@@ -28,28 +28,28 @@
         <!-- Форма для фильтрации данных -->
         <div class="row">
             <div class="col">
-                <form method="GET" action=".">
+                <form method="GET" action="." class="py-5">
                     <div class="form-row">
-                        <div class="input-group">
-                            <input type="search" name="vehicle" placeholder="модель техники"/>
-                            <span class="input-group-append">
-                                <div class="input-group-text bg-transparent">
-                                    <i class="fa fa-search"></i>
-                                </div>
-                            </span>
+                        <div class="input-group mb-4">
+                            <button class="input-group-text bg-transparent" type="button"><i class="fa fa-search"></i></button>
+                            <input class="form-control" type="search" name="vehicle" placeholder="модель техники"/>
                         </div>
-                    </div>
-                    <div class="form-row">
-                        <input type="search" name="engine" placeholder="модель двигателя"/>
-                    </div>
-                    <div class="form-row">
-                        <input type="search" name="transmission" placeholder="модель трансмиссии"/>
-                    </div>
-                    <div class="form-row">
-                        <input type="search" name="mainaxle" placeholder="модель ведущего моста"/>
-                    </div>
-                    <div class="form-row">
-                        <input type="search" name="drivenaxle" placeholder="модель управляемого моста"/>
+                        <div class="input-group mb-4">
+                            <button class="input-group-text bg-transparent" type="button"><i class="fa fa-search"></i></button>
+                            <input class="form-control" type="search" name="engine" placeholder="модель двигателя"/>
+                        </div>
+                        <div class="input-group mb-4">
+                            <button class="input-group-text bg-transparent" type="button"><i class="fa fa-search"></i></button>
+                            <input class="form-control" type="search" name="transmission" placeholder="модель трансмиссии"/>
+                        </div>
+                        <div class="input-group mb-4">
+                            <button class="input-group-text bg-transparent" type="button"><i class="fa fa-search"></i></button>
+                            <input class="form-control" type="search" name="mainaxle" placeholder="модель ведущего моста"/>
+                        </div>
+                        <div class="input-group mb-4">
+                            <button class="input-group-text bg-transparent" type="button"><i class="fa fa-search"></i></button>
+                            <input class="form-control" type="search" name="drivenaxle" placeholder="модель управляемого моста"/>
+                        </div>
                     </div>
                     <button type="submit" class="btn btn-primary">Search</button>
                 </form>
