Добавил стили кнопкам на формах создания и удаления объектов

--- a/servicebook/web/templates/add_or_edit_object_form.html
+++ b/servicebook/web/templates/add_or_edit_object_form.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <div class="container">
-    <form method="post">{% csrf_token %}
+    <form method="post" class="py-3">{% csrf_token %}
         <table>
             {{form}}
         </table>
-        <input type="submit" value="Сохранить">
+        <input class="btn btn-primary mt-4 mb-2" type="submit" value="Сохранить">
     </form>
 </div>
 {% endblock content %}
