--- a/servicebook/web/templates/delete_object_form.html
+++ b/servicebook/web/templates/delete_object_form.html
@@ -2,12 +2,12 @@
 
 {% block content %}
 <div class="container">
-    <form method="post">{% csrf_token %}
+    <form method="post" class="py-3">{% csrf_token %}
     <p>Вы уверены, что хотите удалить объект "{{ object }}"?</p>
         <table>
             {{ form }}
         </table>
-    <input type="submit" value="Удалить">
+    <input class="btn btn-primary mt-4 mb-2" type="submit" value="Удалить">
 </form>
 </div>
 {% endblock content %}
